finished and functional

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                 </nav>
 
                 <div class="lg:pl-20  ml-4 text-black  lg:flex">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 pr-1 pt-" fill="none" viewBox="0 0 24 24"
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 pr-1 mt-1" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -58,8 +58,8 @@
                 <div></div>
 
             </header>
-            <div class="bg-bodyblack mt-0">
-                <div class="div1">
+            <div class=" bg-bodyblack mt-0 div11 ">
+                <div>
                     <h1 class="text-center lg:text-6xl pt-7 font-bold text-bluee text-3xl">
                         React
                     </h1>
@@ -344,6 +344,7 @@
                                     14.9 62.8,22.9 71.5,22.9
                                     "></polygon>
                                     </svg></a></li>
+                                    
 
                         </ul>
                     </div>
